Corrected alignment issue with creed page and fixed the Regex function on view.js

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -238,6 +238,13 @@ body {
     padding-right: .5rem;
 }
 
+#error {
+  color: red;
+}
+
+.creed {
+  text-align: center;
+}
 
 /* About styles section
 ======================= */
